<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activity.About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:id="@+id/txtAbout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/about_the_app"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtAG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/txtDev_by"
            android:layout_centerHorizontal="true"
            android:text="@string/AG"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtAbout_text"
            android:layout_alignStart="@+id/txtAbout_text"
            android:layout_below="@+id/txtAbout_text"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/rate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_Rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRate"
            android:text="@string/btn_rate" />

        <TextView
            android:id="@+id/txtDev_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_donate_999"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/developed"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</ScrollView>
