<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_Players"
        android:id="@+id/btnPlayers"
        android:layout_above="@+id/btnStats"
        android:layout_centerInParent="true"
        android:layout_alignLeft="@+id/btnStats"
        android:layout_alignRight="@+id/btnStats" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_Stats"
        android:id="@+id/btnStats"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_Settings"
        android:id="@+id/btnSett"
        android:layout_below="@+id/btnStats"
        android:layout_centerInParent="true"
        android:layout_alignLeft="@+id/btnStats"
        android:layout_alignRight="@+id/btnStats" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_About"
        android:id="@+id/btnAbout"
        android:layout_below="@+id/btnSett"
        android:layout_alignRight="@+id/btnSett"
        android:layout_alignEnd="@+id/btnSett"
        android:layout_alignLeft="@+id/btnSett"
        android:layout_alignStart="@+id/btnSett"
        android:layout_centerInParent="true" />
</RelativeLayout>
