<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listNewPlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/imgBtnAddPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/players_screen_Add_Player"
            android:src="@drawable/add_player"/>

        <ImageButton
            android:id="@+id/imgBtnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="left"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/players_screen_Clear_All"
            android:src="@drawable/clear"/>

        <ImageButton
            android:id="@+id/imgBtnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/players_screen_Start_Game"
            android:src="@drawable/start"/>

    </RelativeLayout>
</LinearLayout>