<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/currentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/btnNextPlayer"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/txtTotal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/total"
        android:layout_toLeftOf="@+id/total"
        android:text="@string/total_power"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnNextPlayer"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/txtPlayerLvl"
        android:layout_marginLeft="30dp"
        android:text="@string/level"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtPlayerLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/btnLvlUp"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/txtLevel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtPlayerGear"
        android:layout_marginRight="30dp"
        android:text="@string/gear"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtPlayerGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/btnGearUp"
        android:layout_marginRight="26dp"
        android:layout_toLeftOf="@+id/txtGear"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <ImageButton
        android:id="@+id/btnLvlUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentPlayer"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/txtLevel"
        android:background="@null"
        android:src="@drawable/munchkin_in_game_up_btn" />

    <ImageButton
        android:id="@+id/btnLvlDwn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPlayerLvl"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/txtLevel"
        android:background="@null"
        android:src="@drawable/munchkin_in_game_dwn_btn" />

    <ImageButton
        android:id="@+id/btnGearUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/currentPlayer"
        android:layout_marginRight="2dp"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/txtGear"
        android:background="@null"
        android:src="@drawable/munchkin_in_game_up_btn" />

    <ImageButton
        android:id="@+id/btnGearDwn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/txtPlayerGear"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@+id/txtGear"
        android:background="@null"
        android:src="@drawable/munchkin_in_game_dwn_btn" />


    <ImageButton
        android:id="@+id/btnDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnLvlDwn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:background="@null"
        android:src="@drawable/munchkin_in_game_dice_btn" />

    <ImageButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnDice"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/btnDice"
        android:layout_marginRight="10dp"
        android:background="@null"
        android:src="@drawable/munchkin_in_game_end" />

    <Button
        android:id="@+id/btnNextPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:height="45dp"
        android:gravity="center"
        android:text="@string/btnNextPlayer"
        android:textStyle="bold" />

</RelativeLayout>
